--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Создание скрипта продаж по вашим вводным"
     />
-    <title>React App</title>
+    <title>Скрипт продаж</title>
   </head>
   <body>
     <div id="root"></div>
